# muxux

./: CLAUDE.md  Cargo.toml  dev.sh  justfile  package.json  tsconfig.json  vite.config.ts
cli/: Cargo.toml
cli/src/: client.rs  main.rs
core/: Cargo.toml
core/src/: command.rs  help.rs  lib.rs  service.rs  sys.rs
core/src/data/: mod.rs  parts.rs
core/src/infrastructure/: tmux.rs
core/src/layout/: capture.rs  mod.rs  snapshot.rs  targeting.rs  timer.rs
core/src/types/: config.rs  mod.rs
frontend/: index.html  main.ts  style.css
frontend/types/: index.ts  protocol.ts  session.ts  tiles.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: ipc.rs  lib.rs  main.rs
tauri/tests/: e2e_launch.rs
